# ytplaylistlauncher

./: LICENSE  README.md  pyproject.toml
src/: __main__.py  ytplaylistlauncher.py
