[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "ytplaylistlauncher"
version = "1.0.0"
authors = [
    { name="Ryan Luttrull", email="reluttrull@gmail.com" },
]
description = "CL interface to search for and select YT Music playlists"
dependencies = ["ytmusicapi", "termcolor"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.urls]
Homepage = "https://github.com/reluttrull/ytplaylistlauncher"

[project.scripts]
ytplaylistlauncher = "src.ytplaylistlauncher:main"